# emergent-graphs

graph-generator/: .env.example  .gitignore  KnowledgeGraphExtractor.py  README.md  config.json  main.py  pyproject.toml  requirements.txt
graph-viz/: CONTRIBUTING.md  LICENSE  README.md  graph-ai-deepseek-32b.json  graph_artificial_intelligence.json  package-lock.json  package.json
graph-viz/public/: graph_artificial_intelligence.json  sample-graph.json
graph-viz/src/: App.css  App.jsx
