[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-generator"
version = "0.1.0"
description = "An intelligent knowledge graph generator using LLMs"
readme = "README.md"
authors = [
    {name = "Victor Sletten", email = "vsletten@google.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.7",
    "langchain-community>=0.0.10",
    "langchain-anthropic>=0.0.3",
    "chromadb>=0.4.13",
    "networkx>=3.1",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
    "langchain-ollama>=0.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0"
]

[project.scripts]
kg-generate = "main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true